# QSleeperFantasyBot

./: .coverage  .gitignore  README.md  bot.py  cli_dynasty_compare.py  dynasty_compare.py  fantasycalc.py  logger.py  main.py  messages.py  player_model.py  pyproject.toml  user_data.json
.github/actions/bump-patch-and-tag/: action.yml
.github/actions/create-release-note/: action.yml
.github/actions/prepare-uv-environment/: action.yml
.github/actions/run-build/: action.yml
.github/actions/run-typecheck/: action.yml
.github/workflows/: ci.yml
scripts/: bump_patch.py  sync_global_sleeper_users.py
src/: bot.py  cli_dynasty_compare.py  cli_single_player_trade.py  dynasty_compare.py  fantasycalc.py  messages.py  player_model.py
src/qsleeperfantasybot/: __init__.py  autocomplete.py  bot.py  constants.py  dynasty_compare.py  fantasycalc.py  logger.py  messages.py  player_model.py  version.py
src/qsleeperfantasybot/commands/: __init__.py  dynasty_trade.py  get_leagues.py  help.py  kicker_to_pick.py  store_sleeper_user.py
src/qsleeperfantasybot/kicker_to_pick/: calculate_rookie_pick_from_kicker.py
src/qsleeperfantasybot/sleeper/api/: parser.py
src/qsleeperfantasybot/sleeper/model/: avatar.py  league.py  user.py
test/: __init__.py  conftest.py  test_fantasycalc.py  test_messages.py
test/commands/: test_store_sleeper_user.py
test/resources/: player_data_response.json
tests/: test_calculate_rookie_pick_from_kicker.py  test_fantasycalc.py  test_messages.py
tests/commands/: test_store_sleeper_user.py
